--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <script src="FileSaver.js" async></script>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" async type="module"></script>
@@ -21,13 +24,10 @@
             <input type="text" id="note-input">
             <img src="images/plus-square-Filled.svg" id="save-btn" class="save-btn">
         </div>
-        <div class="buttons">
-            <button id="export-btn" class="export-btn btn">Export</button>
-            <label for="import-btn" class="import-btn-label btn">Import</label>
-            <input type="file" id="import-btn" class="import-btn btn" accept=".md">
-            <button id="copy-markdown-btn" class="copy-markdown-btn btn">Copy Markdown</button>
-            <div id='copy-tooltip' class="copy-tooltip btn">Copied</div>
-            <button id="clear-btn" class="clear-btn btn">Clear</button>
+        <div class="list-selector">
+            <img src="./images/ArrowCircleRight.svg" id="right-btn" class="right-btn"/>
+            <input type="text" id="list-name" class="list-name" value="What can Ai be?">
+            <img src="./images/ArrowCircleRight.svg" id="left-btn" class="left-btn"/>
         </div>
     </div>
     <ul id='ul-el'></ul>
