add options and fix lft-right typo

--- a/main.html
+++ b/main.html
@@ -24,11 +24,15 @@
             <input type="text" id="note-input">
             <img src="images/plus-square-Filled.svg" id="save-btn" class="save-btn">
         </div>
-        <div class="list-selector">
-            <img src="./images/ArrowCircleRight.svg" id="right-btn" class="right-btn"/>
-            <input type="text" id="list-name" class="list-name" value="What can Ai be?">
-            <img src="./images/ArrowCircleRight.svg" id="left-btn" class="left-btn"/>
-        </div>
+        <section class="options-container">
+            <div class="list-selector">
+                <img src="./images/ArrowCircleRight.svg" id="left-btn" class="left-btn"/>
+                <input type="text" id="list-name" class="list-name" value="What can Ai be?">
+                <img src="./images/ArrowCircleRight.svg" id="right-btn" class="right-btn"/>
+                <img src="./images/doc.svg" id="save-list" class="save-list"/>
+                <img src="./images/DotsThreeCircleVertical.svg" id="options-btn" class="options-btn"/>
+            </div>
+        </section>
     </div>
     <ul id='ul-el'></ul>
     <footer>
