remove hardcoded value on input

--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
         <section class="options-container">
             <div class="list-selector">
                 <img src="./images/ArrowCircleRight.svg" id="left-btn" class="left-btn"/>
-                <input type="text" id="list-name" class="list-name" value="What can Ai be?">
+                <input type="text" id="list-name" class="list-name">
                 <img src="./images/ArrowCircleRight.svg" id="right-btn" class="right-btn"/>
                 <img src="./images/doc.svg" id="save-list" class="save-list"/>
                 <img src="./images/DotsThreeCircleVertical.svg" id="options-btn" class="options-btn"/>
