Create Options Modal

--- a/main.html
+++ b/main.html
@@ -33,8 +33,18 @@
                 <img src="./images/DotsThreeCircleVertical.svg" id="options-btn" class="options-btn"/>
             </div>
         </section>
+        <div class="modal" id="modal">
+            <ul class="options-ul">
+                <li id="export-list">Export List</li>
+                <li id="import-list">Import List</li>
+                <li id="new-list">New List</li>
+                <li id="delete-list">Delete List</li>
+                <li id="export-lists">Export All</li>
+                <li id="delete-all-lists">Delete All</li>
+            </ul>
+        </div>
     </div>
-    <ul id='ul-el'></ul>
+    <ul id='links-ul' class="links-ul"></ul>
     <footer>
         <p class="creator">by <span class="empingames">
             <a href="https://empingames.com/" target="_blank">
