Add new list functionality and import list feature

--- a/main.html
+++ b/main.html
@@ -36,7 +36,10 @@
         <div class="modal" id="modal">
             <ul class="options-ul">
                 <li id="export-list">Export List</li>
-                <li id="import-list">Import List</li>
+                <li id="import-list">
+                    <label for="import-btn" class="import-btn-label btn">Import List</label>
+                    <input type="file" id="import-btn" class="import-btn btn" accept=".md">
+                </li>
                 <li id="new-list">New List</li>
                 <li id="delete-list">Delete List</li>
                 <li id="export-lists">Export All</li>
