Add tooltip if only 1 list

--- a/main.html
+++ b/main.html
@@ -28,8 +28,10 @@
             <div class="list-selector">
                 <img src="./images/ArrowCircleRight.svg" id="left-btn" class="left-btn"/>
                 <input type="text" id="list-name" class="list-name">
+                <div id='list-tooltip' class="list-tooltip btn">This is the only list</div>
                 <img src="./images/ArrowCircleRight.svg" id="right-btn" class="right-btn"/>
-                <img src="./images/doc.svg" id="save-list" class="save-list"/>
+                <img src="./images/doc.svg" id="copy-markdown-btn" class="save-list"/>
+                <div id='copy-tooltip' class="copy-tooltip btn">Copied</div>
                 <img src="./images/DotsThreeCircleVertical.svg" id="options-btn" class="options-btn"/>
             </div>
         </section>
