Remove redundant import button and update creator's website link

--- a/main.html
+++ b/main.html
@@ -37,17 +37,13 @@
         </section>
         <div class="modal" id="modal">
             <ul class="options-ul">
-                <li id="export-list">Export List</li>
-                <li id="import-list">
-                    <label for="import-btn" class="import-btn-label btn">Import List</label>
-                    <input type="file" id="import-btn" class="import-btn btn" accept=".md">
-                </li>
                 <li id="new-list">New List</li>
                 <li id="delete-list">Delete List</li>
+                <li id="export-list">Export List</li>
                 <li id="export-lists">Export All</li>
-                <li id="import-multiple-list">
-                    <label for="import-all-btn" class="import-btn-label btn">Import Multiple</label>
-                    <input type="file" id="import-all-btn" class="import-btn btn" accept=".md">
+                <li id="import-list">
+                    <label for="import-btn" class="import-btn-label btn">Import</label>
+                    <input type="file" id="import-btn" class="import-btn btn" accept=".md">
                 </li>
                 <li id="delete-all-lists">Delete All</li>
             </ul>
@@ -63,9 +59,11 @@
     </div>
     <ul id='links-ul' class="links-ul"></ul>
     <footer>
-        <p class="creator">by <span class="empingames">
-            <a href="https://empingames.com/" target="_blank">
-                Empingames</a></span></p>
+        <p class="creator">by 
+            <span class="jpmm21">
+                <a href="http://jpmm21.com/" target="_blank">jpmm21</a>
+            </span>
+        </p>
         <a href="https://www.buymeacoffee.com/jpmm21" target="_blank">
             <img src="images/bmc svg.svg" class="bmc-btn"></a>
     </footer>
