Update page title

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <script src="FileSaver.js" async></script>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" async type="module"></script>
-    <title>URL Saver</title>
+    <title>Tab2Mark</title>
 </head>
 <body>
     <div>
